--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PASSWORD INSICURA</title>
 </head>
 <body>
     
-    <h1 id="password"></h1>
+    <h1 id="user-password"></h1>
 
     <script src="js/script.js"></script>
 </body>
